<resources>
    <string name="facebook_app_id">723905778112913</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="action_settings">Settings</string>
    <string name="point_of_view">Point of View</string>
    <string name="dual">Dual</string>
    <string name="new_game">New Game</string>
    <string name="control">Control :</string>
    <string name="sound">Sound :</string>
    <string name="on">On</string>
    <string name="off">Off</string>

    <string name="achievements_1" translatable="false">CgkI2un9jLEDEAIQAg</string>
    <string name="score">Score</string>
    <string name="privacypolicy" translatable="false">privacy policy</string>
    <string name="starting_info">swipe diagonally from corner to corner to change settings</string>
    <string name="mode">Mode</string>
    <string name="foodChanged">food-color changed to</string>
    <string name="snakeChanged">snake-color changed to</string>
    <string name="backgroundChanged">background-color changed to</string>
    <string name="highscore">Highscore:</string>
    <string name="newHighscore">New Highscore</string>
    <string name="color_black">black</string>
    <string name="color_grey">grey</string>
    <string name="color_white">white</string>
    <string name="color_green">green</string>
    <string name="color_blue">blue</string>
    <string name="color_red">red</string>
    <string name="color_gold">gold</string>
    <string name="color_yellow">yellow</string>
    <string name="color_magenta">purple</string>
    <string name="color_darkslategrey">darkslategrey</string>
    <string name="color_maroon">maroon</string>
    <string name="mode_normal">Normal</string>
    <string name="mode_combined">combined</string>
    <string name="mode_portal">Portals</string>
    <string name="mode_no_border">No Border</string>
    <string name="win">You won? OmegaLUL</string>
    <string name="color_orange_red">orange-red</string>
    <string name="color_lime_green">lime-green</string>
    <string name="color_deep_sky_blue">deep-sky-blue</string>
    <string name="color_medium_slate_blue">medium-slate-blue</string>
    <string name="snake_control_info" translatable="false">swipe or click to control the snake</string>
    <string name="button_settings_text" translatable="false">Settings</string>

    <!-- Preference -->
    <string name="game_settings" translatable="false">Game Settings</string>
    <string name="portal_summary">Why play without?!</string>
    <string name="portal_titel" translatable="false">Portals</string>
    <string name="show_score_summary" translatable="false">:3</string>
    <string name="show_score_title">Show score</string>
    <string name="background_color_interval_summary">choose one of the custom background colors</string>
    <string name="background_color_interval_title">Backgroundcolor</string>
    <string name="appclication_settings_category">Application Settings</string>
    <string name="darkmode_summary" translatable="false">Coming soon!</string>
    <string name="darkmode_titel" translatable="false">Darkmode</string>
    <string name="info_category" translatable="false">Information</string>
    <string name="game_speed_interval_summary" translatable="false">set speed of snake</string>
    <string name="game_speed_interval_title" translatable="false">Speed of Snake</string>
    <string name="game_block_size__summary" translatable="false">size blocks maaan</string>
    <string name="game_block_size__title" translatable="false">Block Size</string>
    <string name="achievements_exception" translatable="false">There was an issue commucating with achievements</string>
    <string name="leaderboards_exception" translatable="false">Issue with communitcate leaderboard</string>
    <string name="status_exception_error" translatable="false">%1$s (status %2$d). %3$s.</string>
    <string name="hard_mode_explanation" translatable="false">hard mode explanation</string>
    <string name="easy_mode_explanation" translatable="false">easy_mode_explanation</string>
    <string name="border_titel">Borders</string>
    <string name="snake_color_interval_summary">switch the color of the snake</string>
    <string name="snake_color_interval_title">Snake Color</string>
    <string name="food_color_interval_summary">changes the color of the food</string>
    <string name="food_color_interval_title">Food Color</string>
    <string name="sound_summary">Sound when snakes eats/dies or goes through Portals</string>
    <string name="sound_titel">Sounds</string>
    <string name="vibration_summary">vibrations when snake does action</string>
    <string name="vibration_titel">Vibration</string>
    <string name="toast_titel">Toast-Texts</string>
    <string name="taost_summary">little popup texts</string>
    <string name="control_interval_summary">change how you control the snake</string>
    <string name="control_interval_title">Controls</string>
    <string name="border_summary">If Snake hits edge of the screen -> dead</string>
    <string name="color_settings">Color Settings</string>
    <string name="music_title">Music</string>
    <string name="players_exception">players_exception</string>
    <string name="signin_other_error">signin_other_error</string>
    <string name="ajustes_almacenamiento_bt">ajustes_almacenamiento_bt</string>
    <string name="ajustes_almacenamiento">ajustes_almacenamiento</string>
    <string name="ajustes_almacenamiento_desc">ajustes_almacenamiento_desc</string>
    <string name="push">Lucky time!</string>
</resources>
