<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:key="game_settings_category"
        android:title="@string/game_settings">

        <CheckBoxPreference
            android:defaultValue="false"
            android:key="portal_key"
            android:title="@string/portal_titel" />

        <CheckBoxPreference
            android:defaultValue="true"
            android:key="border_key"
            android:title="@string/border_titel" />

        <CheckBoxPreference
            android:defaultValue="false"
            android:key="show_score"
            android:title="@string/show_score_title" />

        <ListPreference
            android:defaultValue="9"
            android:dependency="game_settings_category"
            android:entries="@array/speed_entries"
            android:entryValues="@array/speed_values"
            android:key="game_speed_interval"
            android:title="@string/game_speed_interval_title" />
    </PreferenceCategory>

    <PreferenceCategory
        android:key="game_color_category"
        android:title="@string/color_settings">

        <ListPreference
            android:defaultValue="5"
            android:dependency="game_color_category"
            android:entries="@array/color_entries"
            android:entryValues="@array/color_values"
            android:key="background_color_interval"
            android:title="@string/background_color_interval_title" />

        <ListPreference
            android:defaultValue="4"
            android:dependency="game_color_category"
            android:entries="@array/color_entries"
            android:entryValues="@array/color_values"
            android:key="snake_color_interval"
            android:title="@string/snake_color_interval_title" />

        <ListPreference
            android:defaultValue="6"
            android:dependency="game_color_category"
            android:entries="@array/color_entries"
            android:entryValues="@array/color_values"
            android:key="food_color_interval"
            android:title="@string/food_color_interval_title" />


    </PreferenceCategory>

    <PreferenceCategory
        android:key="application_settings_category"
        android:title="@string/appclication_settings_category">

        <ListPreference
            android:defaultValue="0"
            android:dependency="game_settings_category"
            android:entries="@array/control_entries"
            android:entryValues="@array/control_values"
            android:key="control_interval"
            android:title="@string/control_interval_title" />

        <!--    <CheckBoxPreference
                android:defaultValue="true"
                android:key="darkmode_key"
                android:summary="@string/darkmode_summary"
                android:title="@string/darkmode_titel" />-->

        <CheckBoxPreference
            android:defaultValue="false"
            android:key="toast_key"
            android:title="@string/toast_titel" />

        <CheckBoxPreference
            android:defaultValue="false"
            android:key="music_key"
            android:title="@string/music_title" />

        <CheckBoxPreference
            android:defaultValue="false"
            android:key="sound_key"
            android:title="@string/sound_titel" />

        <CheckBoxPreference
            android:defaultValue="false"
            android:key="vibration_key"
            android:title="@string/vibration_titel" />
    </PreferenceCategory>
    
</PreferenceScreen>
